<resources>
    <!--- Encabezado barra -->
    <string name="app_name">Informed City</string>

    <!--- Ventana InicioSesion -->
    <string name="app_login">Login</string>
    <string name="app_sign_up">Sign up</string>
    <string name="app_sign_in">Sign in</string>
    <string name="app_email_login">Email</string>
    <string name="app_password_login">Password</string>

    <!--- Direccion consultas -->
    <string name="comentario_evento_actual">http://informed-city-env.ptkfheyfpn.us-east-1.elasticbeanstalk.com/comment_current_events</string>
    <string name="comentario_evento_futuro">http://informed-city-env.ptkfheyfpn.us-east-1.elasticbeanstalk.com/comment_future_events</string>
    <string name="evento_actual">http://informed-city-env.ptkfheyfpn.us-east-1.elasticbeanstalk.com/current_events</string>
    <string name="evento_futuro">http://informed-city-env.ptkfheyfpn.us-east-1.elasticbeanstalk.com/future_events</string>
    <string name="reportes_evento_actual">http://informed-city-env.ptkfheyfpn.us-east-1.elasticbeanstalk.com/report_current_events</string>
    <string name="reportes_evento_futuro">http://informed-city-env.ptkfheyfpn.us-east-1.elasticbeanstalk.com/report_future_events</string>
    <string name="user_login">http://informed-city-env.ptkfheyfpn.us-east-1.elasticbeanstalk.com/auth/sign_in</string>
    <string name="user_register">http://informed-city-env.ptkfheyfpn.us-east-1.elasticbeanstalk.com/auth/</string>
    <string name="users">http://informed-city-env.ptkfheyfpn.us-east-1.elasticbeanstalk.com/users</string>
    <string name="instituciones">http://informed-city-env.ptkfheyfpn.us-east-1.elasticbeanstalk.com/institutions</string>

    <!--- Ventana Menu principal -->
    <string name="title_activity_menu_principal">Informed City</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--- NAV_HEADER -->
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <string name="menu_map_event">Map of events</string>
    <string name="menu_create_current_event">Create current event</string>
    <string name="menu_create_future_event">Create future event</string>
    <string name="menu_wall_companies">Wall of companies</string>
    <string name="menu_about">About</string>

    <!--- Ventana Datos Evento -->
    <string name="event_data_titule">Event information</string>
    <string name="event_data_name">Name:</string>
    <string name="event_data_category">Category:</string>
    <string name="event_data_report">Report</string>
    <string name="event_data_check">Check</string>
    <string name="event_data_comments">Comments</string>
    <string name="event_data_date_create">Publication date:</string>
    <string name="event_data_date_future">Scheduled date:</string>
    <string name="event_data_description">Description</string>

    <!--- Ventana Registro -->

    <string name="app_register">Sign up</string>
    <string name="app_create_account">Create account</string>
    <string name="app_email_register">Email</string>
    <string name="app_password_register">Password</string>
    <string name="app_repeat_password_register">Repeat your password</string>

    <!--- Ventana Ajustes -->
    <string name="app_ajustes">Personal information</string>
    <string name="app_guardar_ajustes">Save</string>
    <string name="app_nombre_ajustes">Name</string>
    <string name="app_apellidos_ajustes">Lastname</string>
    <string name="app_nombre_usuario_ajustes">Nickname</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--- Ventana TabEventos -->
    <string name="tab1">Information</string>
    <string name="tab2">Comments</string>
    <string name="verificado">Checked</string>
    <string name="no_verificado">Not checked</string>

    <!--- Ventana Comentarios -->
    <string name="comment_input">Entry a comment</string>
    <string name="no_comments">There are no comments</string>

    <!--- Ventana Reportar Evento -->
    <string name="report_event_report">Report</string>
    <string name="report_event_reason">Reason for report</string>
    <string name="report_event_comment">Comment</string>
    <string name="report_event_description">Description</string>
    <string name="report_event_accept">Accept</string>
    <string name="report_event_cancel">Cancel</string>

    <!--- Ventana Agregar evento actual-->
    <string name="titulo_agregar_evento_actual">Create Current Event</string>
    <string name="nombre_agregar_evento_actual">Name</string>
    <string name="categoria_agregar_evento_actual">Category</string>
    <string name="descripcion_agregar_evento_actual">Description</string>
    <string name="ubicacion_agregar_evento_actual">Location</string>
    <string name="boton_agregar_evento_actual">Create</string>

    <!--- Ventana Acerca De -->
    <string name="about_title">About</string>
    <string name="about_students">Students</string>
    <string name="about_student1">Marlon Reyes Montero</string>
    <string name="about_student2">Gerald Morales Alvarado</string>
    <string name="about_student3">Gabriel Ramírez Ramírez</string>
    <string name="about_course">Course</string>
    <string name="about_ap">Project management</string>
    <string name="about_teacher">Teacher</string>
    <string name="about_prof">Jaime Solano Soto</string>
    <string name="about_feria">Trade fairs for business ideas, Cartago 2018</string>
    <string name="about_acept">Accept</string>

    <!--- Ventana Muro Empresas -->
    <string name="companies_wall">Companies Wall</string>
    <string name="wall_acept">Accept</string>
    <string name="wall_comp1">The ICE reports the following events.</string>
    <string name="wall_comp2">The AyA reports the following events.</string>
    <string name="wall_comp3">The Police reports the following events.</string>

    <!--- Ventana Agregar evento futuro-->
    <string name="titulo_agregar_evento_futuro">Create Future Event</string>
    <string name="nombre_agregar_evento_futuro">Name</string>
    <string name="categoria_agregar_evento_futuro">Category</string>
    <string name="descripcion_agregar_evento_futuro">Description</string>
    <string name="ubicacion_agregar_evento_futuro">Location</string>
    <string name="boton_agregar_evento_futuro">Create</string>
    <string name="fecha_agregar_evento_futuro">Date</string>
    <string name="hora_agregar_evento_futuro">Time</string>

</resources>