<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:hapticFeedbackEnabled="false"
    tools:context="com.example.gerald.informedcity.Vista.InicioSesion">

    <TextView
        android:id="@+id/tituloLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_login"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="74dp" />

    <EditText
        android:id="@+id/email_login"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/app_email_login"
        android:inputType="textPersonName"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="144dp" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/app_password_login"
        android:inputType="textPassword"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="220dp" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/app_sign_in"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="342dp" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/app_sign_up"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="411dp" />

</android.support.constraint.ConstraintLayout>
