<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vista.AcercaDe">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_title"
                    android:layout_marginLeft="120dp"
                    android:layout_marginTop="30dp"
                    android:textColor="@android:color/black"
                    android:textSize="30sp"
                    android:textStyle="normal"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_students"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="30dp"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="normal"/>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_student1"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="normal"/>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_student2"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="normal"/>

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_student3"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="normal"/>

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_course"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="30dp"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="normal"/>

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_ap"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="normal"/>

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_teacher"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="30dp"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_prof"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="normal"/>

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_feria"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="30dp"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="normal"/>

                <Button
                    android:id="@+id/buttonAboutAcept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="140dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorButtons"
                    android:text="@string/about_acept"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>