<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gerald.informedcity.vista.Registro">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp"
            android:focusable="true"
            android:focusableInTouchMode="true">


            <TextView
                android:id="@+id/tituloRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="50dp"
                android:includeFontPadding="false"
                android:text="@string/app_register"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/email_registro"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tituloRegistro"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:hint="@string/app_email_register"
                android:inputType="textEmailAddress"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/password_registro"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_registro"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:hint="@string/app_password_register"
                android:inputType="textPassword"
                android:textAlignment="center" />
            <EditText
                android:id="@+id/repeat_password_registro"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password_registro"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:hint="@string/app_repeat_password_register"
                android:inputType="textPassword"
                android:textAlignment="center" />

            <Button
                android:id="@+id/create_account_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/repeat_password_registro"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="80dp"
                android:background="@color/colorButtons"
                android:text="@string/app_create_account"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </RelativeLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
