<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vista.DatosEventos">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="30dp"
                android:includeFontPadding="false"
                android:text="@string/event_data_titule"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/textViewDEn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="90dp"
                android:text="@string/event_data_name"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="93dp" />

            <EditText
                android:id="@+id/editTextDEName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textViewDEn"
                android:layout_alignStart="@+id/editTextDECategory"
                android:ems="10"
                android:focusable="false"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="150dp"
                android:text="@string/event_data_category" />

            <EditText
                android:id="@+id/editTextDECategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView5"
                android:layout_alignStart="@+id/editTextDEPubDate"
                android:ems="10"
                android:focusable="false"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="220dp"
                android:text="@string/event_data_date_create" />

            <EditText
                android:id="@+id/editTextDEPubDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView8"
                android:layout_alignStart="@+id/editTextDESchDate"
                android:ems="10"
                android:inputType="textPersonName"
                android:focusable="false"/>

            <EditText
                android:id="@+id/editTextDEDescription"
                android:layout_width="299dp"
                android:layout_height="80dp"
                android:layout_above="@+id/textViewScDate"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="-330dp"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/event_data_description"
                android:inputType="textPersonName" />/>

            <TextView
                android:id="@+id/textViewScDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="370dp"
                android:text="@string/event_data_date_future" />

            <EditText
                android:id="@+id/editTextDESchDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textViewScDate"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="26dp"
                android:ems="10"
                android:focusable="false"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="480dp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@color/colorButtons"
                android:text="@string/event_data_comments"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textViewDEestado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="420dp" />


        </RelativeLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>