<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vista.ReportarEvento">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="30dp"
                android:includeFontPadding="false"
                android:text="@string/report_event_report"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/textViewREn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/editTextREName"
                android:layout_alignStart="@+id/editTextREdescription"
                android:layout_marginBottom="-145dp"
                android:text="@string/report_event_reason"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="93dp" />

            <TextView
                android:id="@+id/textViewREnombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="92dp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="93dp" />

            <EditText
                android:id="@+id/editTextREName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="147dp"
                android:ems="10"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textViewREco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/textViewREn"
                android:layout_marginTop="219dp"
                android:text="@string/report_event_comment" />

            <EditText
                android:id="@+id/editTextREdescription"
                android:layout_width="match_parent"
                android:layout_height="97dp"
                android:layout_below="@+id/textViewREco"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:hint="@string/event_data_description"
                android:inputType="textPersonName" />


            <Button
                android:id="@+id/buttonREaccept"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@color/colorButtons"
                android:layout_below="@+id/editTextREdescription"
                android:text="@string/report_event_accept"
                android:layout_marginStart="100dp"
                android:layout_marginRight="10dp"
                android:textColor="@android:color/white"
                android:layout_marginTop="10dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonREcancel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextREdescription"
                android:layout_marginEnd="64dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorButtons"
                android:text="@string/report_event_cancel"
                android:layout_marginStart="10dp"
                android:layout_marginRight="100dp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_toRightOf="@id/buttonREaccept"/>


        </RelativeLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>