<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gerald.informedcity.vista.AjustesCuenta">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp"
            android:focusable="true"
            android:focusableInTouchMode="true">


            <TextView
                android:id="@+id/tituloAjusteCuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="50dp"
                android:includeFontPadding="false"
                android:text="@string/app_ajustes"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/nombre_cuenta"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tituloAjusteCuenta"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="40dp"
                android:hint="@string/app_nombre_ajustes"
                android:inputType="textPersonName"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/apellidos_usuario"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nombre_cuenta"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/app_apellidos_ajustes"
                android:inputType="textPersonName"
                android:textAlignment="center" />
            <EditText
                android:id="@+id/nickname_usuario"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/apellidos_usuario"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/app_nombre_usuario_ajustes"
                android:inputType="textPersonName"
                android:textAlignment="center" />

            <Button
                android:id="@+id/guardar_datos_cuenta_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/nickname_usuario"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="100dp"
                android:background="@color/colorButtons"
                android:text="@string/app_guardar_ajustes"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imagenUsuario"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignTop="@+id/nombre_cuenta"
                android:layout_marginStart="27dp"
                android:layout_toEndOf="@+id/nombre_cuenta"
                android:src="@android:color/darker_gray" />

            <Button
                android:id="@+id/buttonFoto"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignEnd="@+id/guardar_datos_cuenta_button"
                android:layout_below="@+id/imagenUsuario"
                android:layout_marginTop="21dp"
                android:background="@drawable/ic_menu_camera" />

        </RelativeLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
